--- a/lib/mixins/property-effects.html
+++ b/lib/mixins/property-effects.html
@@ -1720,7 +1720,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        *     this.items.splice(1, 1, {name: 'Sam'});
        *     this.items.push({name: 'Bob'});
        *     this.notifySplices('items', [
-       *       { index: 1, removed: [{name: 'Todd'}], addedCount: 1, obect: this.items, type: 'splice' },
+       *       { index: 1, removed: [{name: 'Todd'}], addedCount: 1, object: this.items, type: 'splice' },
        *       { index: 3, removed: [], addedCount: 1, object: this.items, type: 'splice'}
        *     ]);
        *
